@@ -14,6 +14,7 @@ LIBNAME=termcap
 .END
 .CHECK_LIB(lib_curses)
 REQUIRED=FALSE
+DEPEND=lib_termcap
 LIBNAME=curses
 FUNCTION=getwin
 .END
